--- a/src/CocQuery/Views/ClanRankPage.xaml
+++ b/src/CocQuery/Views/ClanRankPage.xaml
@@ -12,6 +12,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ActivityIndicator x:Name="activityIndicator"
@@ -20,83 +21,75 @@
                            Color="Gray"
                            HorizontalOptions="Center"
                            VerticalOptions="Center" />
-        <Picker Title="部落位置"
-                HorizontalOptions="Center"
-                ItemsSource="{Binding Locations}"
-                SelectedItem="{Binding SelectedLocation}"
-                ItemDisplayBinding="{Binding DisplayName}" />
-
-        <ListView IsVisible="True"
-                  Grid.Row="1"
-                  Margin="20"
-                  ItemsSource="{Binding Clans}"
-                  VerticalOptions="FillAndExpand"
-                  HasUnevenRows="True"
-                  VerticalScrollBarVisibility="Never">
-            <ListView.ItemTemplate>
-                <DataTemplate x:DataType="cocModels:Clan">
-                    <ViewCell>
-                        <Grid Margin="10">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="auto" />
-                                <RowDefinition Height="auto" />
-                                <RowDefinition Height="auto" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <Image Source="{Binding BadgeUrls.Large}"
-                                   WidthRequest="50"
-                                   HeightRequest="50"
+        <HorizontalStackLayout Grid.Row="1">
+            <Picker Title="部落位置"
+                    Grid.Row="1"
+                    HorizontalOptions="Start"
+                    ItemsSource="{Binding Locations}"
+                    SelectedItem="{Binding SelectedLocation}"
+                    ItemDisplayBinding="{Binding DisplayName}" />
+            <Button Text="刷新"
+                    HorizontalOptions="End"
+                    Command="{Binding SearchCommand}" />
+        </HorizontalStackLayout>
+        <RefreshView Grid.Row="2"
+                     IsRefreshing="{Binding IsRefreshing}"
+                     Command="{Binding RefreshCommand}">
+            <CollectionView ItemsSource="{Binding Clans}"
+                            
+                            SelectionMode="Single"
+                            SelectionChanged="CollectionView_SelectionChanged">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="cocModels:ClanRanking">
+                        <HorizontalStackLayout Padding="10">
+                            <Label Text="{Binding Rank}"
+                                   FontSize="Micro"
                                    Margin="0,0,10,0"
-                                   Aspect="AspectFill"
-                                   Grid.RowSpan="3" />
-                            <HorizontalStackLayout Grid.Column="1">
-                                <Label Text="{Binding Name}"
-                                       FontAttributes="Bold"
-                                       FontSize="Body"
-                                       Margin="0,0,10,0" />
-                                <Label Text="{Binding WarLeague.Name}"
-                                       FontAttributes="Italic"
-                                       FontSize="Small"
-                                       VerticalOptions="Center"
-                                       Margin="0,0,10,0" />
-                            </HorizontalStackLayout>
+                                   VerticalOptions="Center"
+                                   FontAttributes="Bold" />
+                            <Image Source="{Binding BadgeUrls.Large}"
+                                   Margin="0,0,10,0"
+                                   WidthRequest="30"
+                                   HeightRequest="30" />
+                            <Label Text="{Binding Name}"
+                                   Margin="0,0,10,0"
+                                   FontAttributes="None"
+                                   VerticalOptions="Center" />
+                            <Label Text="Pints:"
+                                   Margin="0,0,0,0"
+                                   FontAttributes="None"
+                                   VerticalOptions="Center" />
+                            <Label Text="{Binding ClanPoints}"
+                                   Margin="0,0,10,0"
+                                   FontAttributes="None"
+                                   VerticalOptions="Center" />
+                            <Label Text="LV:"
+                                   Margin="0,0,0,0"
+                                   FontAttributes="None"
+                                   VerticalOptions="Center" />
+                            <Label Text="{Binding ClanLevel}"
+                                   Margin="0,0,10,0"
+                                   FontAttributes="None"
+                                   VerticalOptions="Center" />
+                            <Label Text="成员:"
+                                   Margin="0,0,0,0"
+                                   FontAttributes="None"
+                                   VerticalOptions="Center" />
+                            <Label Text="{Binding  Members}"
+                                   Margin="0,0,10,0"
+                                   FontAttributes="None"
+                                   VerticalOptions="Center" />
+                            <Label Text="Tag:"
+                                   Margin="0,0,0,0"
+                                   FontAttributes="None"
+                                   VerticalOptions="Center" />
                             <Label Text="{Binding Tag}"
-                                   Grid.Column="2"
-                                   FontSize="Small" />
-                            <HorizontalStackLayout Grid.Column="1"
-                                                   Grid.ColumnSpan="2"
-                                                   Grid.Row="1"
-                                                   Margin="0,5,0,0">
-                                <Label Text="所需大本营等级:" />
-                                <Label Text="{Binding RequiredTownhallLevel}"
-                                       VerticalOptions="Center"
-                                       Margin="0,0,5,0" />
-                                <Label Text="所需奖杯:" />
-                                <Label Text="{Binding RequiredTrophies}"
-                                       VerticalOptions="Center"
-                                       Margin="0,0,5,0" />
-                            </HorizontalStackLayout>
-                            <HorizontalStackLayout Grid.Column="1"
-                                                   Grid.ColumnSpan="2"
-                                                   Grid.Row="2"
-                                                   Margin="0,5,0,0">
-                                <Label Text="成员数:" />
-                                <Label Text="{Binding Members}"
-                                       VerticalOptions="Center"
-                                       Margin="0,0,5,0" />
-                                <Label Text="部落等级:" />
-                                <Label Text="{Binding ClanLevel}"
-                                       VerticalOptions="Center"
-                                       Margin="0,0,5,0" />
-                            </HorizontalStackLayout>
-                        </Grid>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+                                   FontAttributes="None"
+                                   VerticalOptions="Center" />
+                        </HorizontalStackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </RefreshView>
     </Grid>
 </ContentPage>
