--- a/src/CocQuery/Views/ClanDetailPage.xaml
+++ b/src/CocQuery/Views/ClanDetailPage.xaml
@@ -9,9 +9,17 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <VerticalStackLayout>
+            <ActivityIndicator x:Name="activityIndicator"
+                               IsRunning="{Binding ActivityIndicatorIsRunning}"
+                               IsVisible="{Binding ActivityIndicatorIsVisible,FallbackValue=False}"
+                               Color="Gray"
+                               HorizontalOptions="Center"
+                               VerticalOptions="Center" />
+            <VerticalStackLayout Grid.Row="1">
                 <Image Source="{Binding Clan.BadgeUrls.Large}"
                        WidthRequest="100"
                        HeightRequest="100"
@@ -22,7 +30,9 @@
                     <Border.StrokeShape>
                         <RoundRectangle CornerRadius="10,10,10,10" />
                     </Border.StrokeShape>
-
+                    <Border.GestureRecognizers>
+                        <TapGestureRecognizer  Tapped="TapGestureRecognizer_Tapped" />
+                    </Border.GestureRecognizers>
                     <VerticalStackLayout>
                         <Label Text="{Binding Clan.Name}"
                                HorizontalOptions="Center"
@@ -32,12 +42,14 @@
                         <HorizontalStackLayout HorizontalOptions="Center">
                             <Label Text="Tag标签:" />
                             <Label VerticalOptions="Center"
+                                   x:Name="ClanTag"
                                    Text="{Binding Clan.Tag}"
                                    FontSize="Small" />
                         </HorizontalStackLayout>
                     </VerticalStackLayout>
                 </Border>
-                <Border Margin="0,10,0,0" Padding="10">
+                <Border Margin="0,10,0,0"
+                        Padding="10">
                     <Border.StrokeShape>
                         <RoundRectangle CornerRadius="10,10,10,10" />
                     </Border.StrokeShape>
@@ -82,7 +94,8 @@
                            Margin="0,0,5,0" />
                 </HorizontalStackLayout>
                 <HorizontalStackLayout Margin="0,10,0,0">
-                    <Label VerticalOptions="Center" Text="部落标签:" />
+                    <Label VerticalOptions="Center"
+                           Text="部落标签:" />
                     <Image Source="{Binding Clan.Labels[0].IconUrls.Medium}"
                            WidthRequest="30"
                            HeightRequest="30"
@@ -96,37 +109,41 @@
                            HeightRequest="30"
                            Margin="10,0,0,0" />
                 </HorizontalStackLayout>
-                
+
             </VerticalStackLayout>
             <Label Text="成员列表"
-                   Grid.Row="1"
+                   Grid.Row="2"
                    FontSize="Body"
                    FontAttributes="Bold"
                    HorizontalOptions="Center"
                    Margin="0,20,0,10" />
-            <ListView Grid.Row="2"
-                      HeightRequest="200"
-                      ItemsSource="{Binding Clan.MemberList}">
-                <ListView.ItemTemplate>
+            <CollectionView Grid.Row="3"
+                            HeightRequest="200"
+                            ItemsSource="{Binding Clan.MemberList}"
+                            SelectionMode="Single"
+                            SelectionChanged="CollectionView_SelectionChanged">
+                <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="cocModels:ClanMember">
-                        <ViewCell>
-                            <HorizontalStackLayout>
-                                <Label Text="{Binding ClanRank}"
-                                       VerticalOptions="Center" />
-                                <Label Text="{Binding Name}"
-                                       Margin="10,0,0,0"
-                                       VerticalOptions="Center" />
-                                <Label Text="{Binding Role}"
-                                       Margin="10,0,0,0"
-                                       VerticalOptions="Center" />
-                                <Label Text="{Binding Tag}"
-                                       VerticalOptions="Center"
-                                       Margin="10,0,0,0" />
-                            </HorizontalStackLayout>
-                        </ViewCell>
+                        <HorizontalStackLayout>
+                            <Label Text="{Binding ClanRank}"
+                                   VerticalOptions="Center" />
+                            <Label Text="{Binding Name}"
+                                   Margin="10,0,0,0"
+                                   VerticalOptions="Center" />
+                            <Label Text="{Binding Role}"
+                                   Margin="10,0,0,0"
+                                   VerticalOptions="Center" />
+                            <Label Text="{Binding Tag}"
+                                   VerticalOptions="Center"
+                                   Margin="10,0,0,0" />
+                        </HorizontalStackLayout>
                     </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+            <VerticalStackLayout Grid.Row="4">
+                <Button HorizontalOptions="End"
+                        Text="查看更多" />
+            </VerticalStackLayout>
         </Grid>
     </ScrollView>
 </ContentPage>
